# e-affidavit-backend

./: pyproject.toml
app/: main.py
app/api/dependencies/: authentication.py  db.py
app/api/routes/: admin_routes.py  affidavit_routes.py  authentication_route.py  authentication_routes.py  commissioner_routes.py  court_system_routes.py  head_of_unit_routes.py  reports_routes.py  routes.py  user_routes.py  user_type_routes.py
app/core/errors/: exceptions.py
app/core/services/: email.py  invitation.py  jwt.py
app/core/services/utils/: utils.py
app/core/settings/: security.py
app/core/settings/configurations/: __init__.py  base.py  local.py  production.py
app/core/settings/env_files/: .env.example
app/database/: base.py
app/database/sessions/: mongo_client.py  session.py
app/models/: affidavit_models.py  commissioner_profile_model.py  court_system_models.py  email.py  head_of_unit_model.py  payment_model.py  user_invite_models.py  user_model.py  user_type_model.py
app/repositories/: category_repo.py  commissioner_profile_repo.py  court_system_repo.py  email_repo.py  head_of_unit_repo.py  user_invite_repo.py  user_repo.py  user_type_repo.py
app/schemas/: affidavit_schema.py  authentication_schema.py  category_schema.py  court_system.py  court_system_schema.py  email_schema.py  jwt_schema.py  report_schema.py  shared_schema.py  stats_schema.py  user.py  user_schema.py  user_type.py  user_type_schema.py
commonLib/repositories/: nosql_repository.py  relational_repository.py
commonLib/response/: response_schema.py
e-affidavit/: pyproject.toml
