[tool.poetry]
name = "e-affidavit"
version = "0.1.0"
description = ""
authors = ["AlexAdedeji <alex.adedeji@identikosolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.109.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
